k8s/services/analytics-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: analytics
spec:
  selector:
    app: analytics
  ports:
  - port: 80
    targetPort: 8005
  type: ClusterIP
