k8s/services/auth-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: auth
spec:
  selector:
    app: auth
  ports:
  - port: 8001
    targetPort: 8001
  type: ClusterIP
