k8s/services/evaluation-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service
  namespace: evaluation
spec:
  selector:
    app: evaluation
  ports:
  - port: 80
    targetPort: 8004
  type: ClusterIP
