k8s/services/flag-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: flag-service
  namespace: flag
spec:
  selector:
    app: flag
  ports:
  - port: 80
    targetPort: 8002
  type: ClusterIP
