k8s/services/targeting-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: targeting-service
  namespace: targeting
spec:
  selector:
    app: targeting
  ports:
  - port: 8003
    targetPort: 8003
  type: ClusterIP
