k8s/services/flag-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flag-route
  namespace: flag
spec:
  parentRefs:
    - name: app-gateway
      namespace: gateway
      sectionName: http
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /flag
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: flag-service
          port: 80
